# trianglepy

./: .appveyor.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md  README.rst  helper_setup.py  setup.py
src/cpp/: wrap_triangle.cpp
test/: test_tri.py
